log
Fri 12 Aug 2022 12:39:56 PM UTC: 
 tests:  0|7
total_score: 0/70
e073ba3
Fri 12 Aug 2022 12:48:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
100c8a9
Fri 12 Aug 2022 12:55:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘]’ token
   40 | *suma = sumaN(a[], m);
      |                 ^
Compilation failed
7c83d11
Fri 12 Aug 2022 12:56:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7e2a99e
Fri 12 Aug 2022 12:58:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 | *suma = sumaN(*a, m);
      |               ^~
      |               |
      |               int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
7174d2f
Fri 12 Aug 2022 12:58:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
84acf58
Fri 12 Aug 2022 01:09:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
889f5fd
Fri 12 Aug 2022 01:19:55 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:18: error: initialization of ‘Persona *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   63 |    Persona *a = {nombre,rut,edad};
      |                  ^~~~~~
exercises.c:63:18: note: (near initialization for ‘a’)
exercises.c:63:25: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                         ^~~
exercises.c:63:25: note: (near initialization for ‘a’)
exercises.c:63:29: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                             ^~~~
exercises.c:63:29: note: (near initialization for ‘a’)
exercises.c:64:11: error: incompatible types when returning type ‘Persona’ but ‘Persona *’ was expected
   64 |    return *a;
      |           ^~
cc1: all warnings being treated as errors
Compilation failed
5c445cb
Fri 12 Aug 2022 01:20:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:18: error: initialization of ‘Persona *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   63 |    Persona *a = {nombre,rut,edad};
      |                  ^~~~~~
exercises.c:63:18: note: (near initialization for ‘a’)
exercises.c:63:25: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                         ^~~
exercises.c:63:25: note: (near initialization for ‘a’)
exercises.c:63:29: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                             ^~~~
exercises.c:63:29: note: (near initialization for ‘a’)
cc1: all warnings being treated as errors
Compilation failed
7aa5fdb
Fri 12 Aug 2022 01:20:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:18: error: initialization of ‘Persona *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   63 |    Persona *a = {nombre,rut,edad};
      |                  ^~~~~~
exercises.c:63:18: note: (near initialization for ‘a’)
exercises.c:63:25: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                         ^~~
exercises.c:63:25: note: (near initialization for ‘a’)
exercises.c:63:29: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                             ^~~~
exercises.c:63:29: note: (near initialization for ‘a’)
exercises.c:63:13: error: unused variable ‘a’ [-Werror=unused-variable]
   63 |    Persona *a = {nombre,rut,edad};
      |             ^
cc1: all warnings being treated as errors
Compilation failed
244d1c8
Fri 12 Aug 2022 01:22:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:18: error: initialization of ‘Persona *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   63 |    Persona *a = {nombre,rut,edad};
      |                  ^~~~~~
exercises.c:63:18: note: (near initialization for ‘a’)
exercises.c:63:25: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                         ^~~
exercises.c:63:25: note: (near initialization for ‘a’)
exercises.c:63:29: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *a = {nombre,rut,edad};
      |                             ^~~~
exercises.c:63:29: note: (near initialization for ‘a’)
exercises.c:64:11: error: incompatible types when returning type ‘Persona’ but ‘Persona *’ was expected
   64 |    return *a;
      |           ^~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
02b4ab0
Fri 12 Aug 2022 01:25:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6d46338
Fri 12 Aug 2022 01:28:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
331faff
Fri 12 Aug 2022 09:07:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:18: error: initialization of ‘Persona *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   63 |    Persona *p = {nombre,rut,edad};
      |                  ^~~~~~
exercises.c:63:18: note: (near initialization for ‘p’)
exercises.c:63:25: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *p = {nombre,rut,edad};
      |                         ^~~
exercises.c:63:25: note: (near initialization for ‘p’)
exercises.c:63:29: error: excess elements in scalar initializer [-Werror]
   63 |    Persona *p = {nombre,rut,edad};
      |                             ^~~~
exercises.c:63:29: note: (near initialization for ‘p’)
exercises.c:64:11: error: incompatible types when returning type ‘Persona’ but ‘Persona *’ was expected
   64 |    return *p;
      |           ^~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0c03149
Fri 12 Aug 2022 09:13:18 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:63:25: error: expected expression before ‘]’ token
   63 |    Persona *p = {nombre[],rut[],edad};
      |                         ^
exercises.c:63:13: error: unused variable ‘p’ [-Werror=unused-variable]
   63 |    Persona *p = {nombre[],rut[],edad};
      |             ^
cc1: all warnings being treated as errors
Compilation failed
579d353
